--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div class="holder">
-    <label form="inputlg" class="dialogBox">Add a message!</label>
-    <textarea class="form-control" rows="5"></textarea>
-    <button type="submit" class ="btn">Submit</button>
+  <div class="content">
+    <form= action="showModal">
+      <div class="addMsg">
+        <label for="message">Add your message here!</label>
+        <input type="text" name="message" value="Hello World" />
+        <button type="submit" class ="btn">Submit</button>
+      </div>
+    </form>
   </div>
   <script src="widget.js"></script>
 </body>
