refactor to include multiple themes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="addMsg" id="one">
         <label for="message">Add your message here!</label>
         <textarea name="message"  >Hello World </textarea>
-        <button type="button" onClick="dialogBoxBasic('title', 'whateves')" class ="btn">Submit</button>
+        <button type="button" onClick="dialogBoxBasic('title', 'whateves', 'error')" class ="btn">Submit</button>
       </div>
     </form>
   </div>
