--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
       </div>
     </form>
   </div>
+  <script>
+    var msg = document.getElementById('msgBox')
+    if(msg){
+      msg.addEventListener("keydown", console.log('pooop'))
+    }
+  </script>
 </body>
 </html>
