(WIP) close on esc

--- a/index.html
+++ b/index.html
@@ -12,15 +12,9 @@
       <div class="addMsg" id="one">
         <label for="message">Add your message here!</label>
         <textarea name="message"  >Hello World </textarea>
-        <button type="button" onClick="dialogBoxBasic('title', 'whateves', 'error')" class ="btn">Submit</button>
+        <button type="button" onClick="dialogBoxBasic('hello darkness my old friend')" class ="btn">Submit</button>
       </div>
     </form>
   </div>
-  <script>
-    var msg = document.getElementById('msgBox')
-    if(msg){
-      msg.addEventListener("keydown", console.log('pooop'))
-    }
-  </script>
 </body>
 </html>
