--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 <body>
   <div class="content">
     <form>
-      <div class="addMsg" id="one">
+      <div class="addMsg" id="messageBox">
         <h1>Create a PopUp Message!</h1>
         <h3>Title</h3>
         <textarea name="title" id="messageTitle" placeholder="Title" ></textarea>
         <h3>Message</h3>
         <textarea name="message" id="messageValue" placeholder="Message"></textarea> <br>
-        <button type="button" onClick="dialogBoxBasic(document.getElementById('messageValue').value, 'basic', document.getElementById('messageTitle').value)" class ="btn">Alert</button>
-        <button type="button" onClick="dialogBoxBasic(document.getElementById('messageValue').value, 'success', document.getElementById('messageTitle').value)" class ="btn">Success</button>
-        <button type="button" onClick="dialogBoxBasic(document.getElementById('messageValue').value, 'warning', document.getElementById('messageTitle').value)" class ="btn">Warning</button>
-        <button type="button" onClick="dialogBoxBasic(document.getElementById('messageValue').value, 'error', document.getElementById('messageTitle').value)" class ="btn">Error</button>
+        
+        <button type="button" style="background-color:#1a1aff;" onClick="dialogBoxBasic(document.getElementById('messageValue').value, 'basic', document.getElementById('messageTitle').value)" class ="btn">Alert</button>
+        <button type="button" style="background-color:#339933;" onClick="dialogBoxBasic(document.getElementById('messageValue').value, 'success', document.getElementById('messageTitle').value)" class ="btn">Success</button>
+        <button type="button" style="background-color:#ff9900;" onClick="dialogBoxBasic(document.getElementById('messageValue').value, 'warning', document.getElementById('messageTitle').value)" class ="btn">Warning</button>
+        <button type="button" style="background-color:#ff3300;" onClick="dialogBoxBasic(document.getElementById('messageValue').value, 'error', document.getElementById('messageTitle').value)" class ="btn">Error</button>
       </div>
     </form>
   </div>
